[package]
name = "muecke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bstr = "1.0.1"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio = { version = "1.22.0", features = ["full"] }
tokio-rustls = "0.23.4"
# webpki = "0.22.0"
